--- a/DataBaseProject/assets/style.css
+++ b/DataBaseProject/assets/style.css
@@ -24,6 +24,7 @@ html, body {
     text-align: center;
     justify-content: center; 
     align-items: center; 
+    color: black;
 }
 
 .login input {
@@ -36,13 +37,90 @@ html, body {
     border: 2px solid #66a6f0;
 }
 
-.login button{
-    width: 100%;
-    padding: 10px;
-    margin: 10px 0;
-    color: black;
+.loginButton{
     background-color: #66a6f0;
-    border: 1px solid #66a6f0;
+    color: white;
+    border: none;
     border-radius: 5px;
-    font-size: 14px;
+    padding: 12px;
+    font-size: 16px;
+    cursor: pointer;
+    width: 100%;
+    margin-top: 20px;
+}
+.loginButton:hover {
+    background-color: #5585d5;
+    transition: all 0.5s ease;
+}
+
+/* Butonlar için flex düzeni */
+.buttonContainer {
+    display: flex;
+    justify-content: space-between; /* Sağ ve sol hizalama */
+    align-items: center;
+    margin-top: 20px;
+}
+
+.buttonContainer a{
+    color: black;
+    text-decoration: none;
+}
+
+/* Arka plan */
+.kayitBackground {
+    background: linear-gradient(90deg, rgba(8, 3, 78, 1) 0%, rgba(139, 142, 164, 1) 50%, rgba(0, 212, 255, 1) 100%);
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+/* Kayıt formu */
+.kayit {
+    background: rgba(0, 212, 255, 1) 100%, rgba(139, 142, 164, 1) 50%, linear-gradient(90deg, rgba(8, 3, 78, 1) 0%);
+    border-radius: 10px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    
+    width: 300px;
+    padding: 30px;
+    text-align: center;
+    justify-content: center; 
+    align-items: center; 
+    color: black;
+
+}
+
+/* Form elemanları */
+.kayit input {
+    width: 100%;
+    padding: 12px;
+    margin: 10px 0;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+.kayit input:focus {
+    outline: none;
+    border-color: #66a6f0;
+    box-shadow: 0 0 5px rgba(102, 166, 240, 0.5);
+}
+
+/* Buton */
+.kayitButton {
+    background-color: #66a6f0;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 12px;
+    font-size: 16px;
+    cursor: pointer;
+    width: 100%;
+    margin-top: 20px;
+}
+
+.kayitButton:hover {
+    background-color: #5585d5;
+    transition: all 0.5s ease;
 }
