--- a/DataBaseProject/assets/style.css
+++ b/DataBaseProject/assets/style.css
@@ -216,3 +216,68 @@ html, body {
 .KullanıcıGiris {
     text-align: center;
 }
+
+.odemeSayfasi {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 50px;
+    font-family: Arial, sans-serif;
+    background-color: #ecf0f1; /* arka plan için açık gri */
+    box-sizing: border-box;
+    padding: 40px;
+  
+}
+/* Splash ekranı için basit stil */
+#splash {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 24px;
+    font-weight: bold;
+    z-index: 9999;
+    display: none; /* Başlangıçta gizli */
+}
+
+
+/* Splash ekranı için stil */
+#splash {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Yarı saydam arka plan */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    display: none; /* Başlangıçta gizli */
+}
+
+/* Yükleme animasyonu */
+.loader {
+    border: 8px solid rgba(255, 255, 255, 0.3);
+    border-top: 8px solid #fff;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
